# build-system-showcase

./: .gitignore  README.md
.github/scripts/: README.md  extract_commands
.github/workflows/: amper.yml  bazel.yml  build.yml  gradle.yml  maven.yml  mill.yml  sbt.yml
_template/: README.md
_template/kotlin-basic/src/main/kotlin/com/example/: JokeLoader.kt
_template/kotlin-basic/src/test/kotlin/com/example/: FileReaderTest.kt
_template/src/main/resources/: joke_1.txt
amper/: README.md  module.yaml
amper/src/com/example/: JokeApp.java
amper/src/java/com/example/: JokeLoader.java
ant/: README.md  build.xml  ivy.xml
ant/java-basic/: build.xml  ivy.xml
ant/src/test/java/com/example/: JokeAppTest.java
bazel/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
bazel/java-basic/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install.json
bazel/src/main/java/com/example/: JokeApp.java
bld/: .gitignore  README.md  bld
bld/java-basic/: bld.bat
bld/java-basic/lib/bld/: bld.cache
bld/java-basic/src/bld/java/com/example/: JokeAppBuild.java
bld/java-basic/src/main/java/com/example/: JokeLoader.java
bld/src/bld/java/com/example/: JokeAppBuild.java
gradle/: README.md  build.gradle.kts  settings.gradle.kts
gradle/gradle/: libs.versions.toml
gradle/java-basic/gradle/: libs.versions.toml
gradle/java-basic/src/main/resources/: joke_3.txt
gradle/kotlin-basic/: build.gradle.kts
gradle/kotlin-basic/gradle/: libs.versions.toml
gradle/kotlin-basic/src/test/kotlin/com/example/: JokeLoaderTest.kt
kotlin-toolchain/: README.md
kotlin-toolchain/java-basic/: module.yaml
kotlin-toolchain/java-basic/test/com/example/: JokeLoaderTest.java
kotlin-toolchain/kotlin-basic/: module.yaml
kotlin-toolchain/kotlin-basic/src/com/example/: FileReader.kt
maven/: README.md  pom.xml
maven/java-basic/: pom.xml
maven/java-basic/src/main/java/com/example/: FileReader.java
maven/java-basic/src/main/resources/: joke_2.txt
maven/java-basic/src/test/java/com/example/: FileReaderTest.java
maven/src/main/java/com/example/: JokeApp.java  JokeLoader.java
maven/src/test/java/com/example/: JokeAppTest.java
mill/: README.md  build.mill.yaml
mill/java-basic/: build.mill.yaml
mill/java-basic/test/: package.mill.yaml
mill/kotlin-basic/: build.mill.yaml
mill/kotlin-basic/src/com/example/: Main.kt
mill/kotlin-basic/test/: package.mill.yaml
mill/test/: package.mill.yaml
sbt/: README.md  build.sbt
sbt/java-basic/: build.sbt
scripts/: test_program.sh
