load("@rules_java//java:defs.bzl", "java_binary", "java_test")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "JokeApp",
    main_class = "com.example.JokeApp",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:commons_io_commons_io"
    ]
)

java_test(
    name = "JokeAppTest",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":JokeApp",
        "@maven//:commons_io_commons_io",
        "@maven//:junit_junit"
    ]
)
