load("@rules_java//java:defs.bzl", "java_binary", "java_test")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "JokeApp",
    main_class = "com.example.JokeApp",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:commons_io_commons_io",
    ]
)

java_test_suite(
    name = "JokeAppTest",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    runner = "junit5",
    deps = [
        ":JokeApp",
        "@maven//:commons_io_commons_io",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ]
)
